--- a/frameworks-and-preprocessors/index.html
+++ b/frameworks-and-preprocessors/index.html
@@ -11,6 +11,13 @@
 
     <h1>Hello, world!</h1>
 
+    <form>
+      <label for="name">Name: 
+        <input type="text" id="name">
+      </label>
+      <label for="email">Email: </label>
+      <input type="text" id="email">
+    </form>
 
   </div>
 </body>
