feat: Add 'heading' section frameworks-and-preprocessors/index.html

--- a/frameworks-and-preprocessors/index.html
+++ b/frameworks-and-preprocessors/index.html
@@ -19,6 +19,12 @@
       <input type="text" id="email">
     </form>
 
+    <div class="heading">
+      <h2>Heading</h2>
+      <p>This is the first paragraph.</p>
+      <p>This is the second paragraph.</p>
+    </div>
+
   </div>
 </body>
 </html>
