feat: Add 'notices' section frameworks-and-preprocessors/index.html

--- a/frameworks-and-preprocessors/index.html
+++ b/frameworks-and-preprocessors/index.html
@@ -25,6 +25,22 @@
       <p>This is the second paragraph.</p>
     </div>
 
+    <div class="notices">
+      <div class="notice">
+        <h2 class="notice-heading">Notice</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+      <div class="notice warning">
+        <h2 class="warning-heading">Warning</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+      <div class="notice success">
+        <h2 class="success-heading">Success</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </div>
+    
+
   </div>
 </body>
 </html>
