--- a/frameworks-and-preprocessors/index.html
+++ b/frameworks-and-preprocessors/index.html
@@ -40,6 +40,26 @@
       </div>
     </div>
     
+    <div class="wrapper">
+      <article class="card">
+        <h2>Card 1</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+      </article>
+      <article class="card featured">
+        <h2>Card 2</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+      </article>
+      <article class="card">
+        <h2>Card 3</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+      </article>
+    </div>
 
   </div>
 </body>
