feat: Add practice.html

--- a/intermediate-html-and-css/emmet/index.html
+++ b/intermediate-html-and-css/emmet/index.html
@@ -10,27 +10,27 @@
   <!-- Wrap with Abbreviation -->
   <!-- #page>p{Hello, world!} -->
   <div id="page">
-  <p>Hello, world!</p>
+    <p>Hello, world!</p>
   </div>
 
   <!-- .wrapper>h1{Title}+.content -->
   <div class="wrapper">
-  <h1>Title</h1>
-  <div class="content"></div>
+    <h1>Title</h1>
+    <div class="content"></div>
   </div>
 
   <!-- #page>p{Hello, world! -->
   <div id="page">
-  <p>Hello, world!</p>
+    <p>Hello, world!</p>
   </div>
 
   <!-- ul>li*5 -->
   <ul>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
   </ul>
 
   <!-- Wrapping individual lines -->
@@ -104,5 +104,133 @@
       <img src="" alt="Contacts">
     </li>
   </ul>
+
+  <!-- Child> -->
+  <!-- div>ul>li -->
+    <div>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+
+  <!-- Sibling+ -->
+  <!-- div+p+bq -->
+   <div></div>
+   <p></p>
+   <blockquote></blockquote>
+
+  <!-- div+div>p>span+em -->
+   <div></div>
+   <div>
+    <p><span></span><em></em></p>
+   </div>
+
+  <!-- Climb-up^ -->
+  <!-- div+div>p>span+em^bg -->
+   <div></div>
+   <div>
+    <p><span></span><em></em></p>
+    <blockquote></blockquote>
+   </div>
+
+   <!-- div+div>p>span+em^^bq -->
+   <div></div>
+   <div>
+    <p><span></span><em></em></p>
+   </div>
+   <blockquote></blockquote>
+
+  <!-- Multiplication* -->
+  <!-- ul>li*5 -->
+   <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+   </ul>
+
+  <!-- Grouping() -->
+  <!-- div>(header>ul>li*2>a)+footer>p -->
+  <div>
+    <header>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </header>
+    <footer>
+      <p></p>
+    </footer>
+  </div>
+
+  <!-- (div>dl>(dt+dd)*3)+footer>p -->
+  <div>
+    <dl>
+      <dt></dt>
+      <dd></dd>
+      <dt></dt>
+      <dd></dd>
+      <dt></dt>
+      <dd></dd>
+    </dl>
+  </div>
+  <footer>
+    <p></p>
+  </footer>
+
+  <!-- Attribute operators -->
+  <!-- Id and class -->
+  <!-- div#header+div.page+div#footer.class1.class2.class3 -->
+  <div id="header"></div>
+  <div class="page"></div>
+  <div id="footer" class="class1 class2 class3"></div>
+
+  <!-- Custom attributes -->
+  <!-- td[title="Hello, world!" colspan=3] -->
+  <td title="Hello, world!" colspan="3"></td>
+  <!-- td[colspan title] -->
+  <td colspan="" title=""></td>
+
+  <!-- Item numbering$ -->
+  <!-- ul>li.item$*5 -->
+  <ul>
+    <li class="item1"></li>
+    <li class="item2"></li>
+    <li class="item3"></li>
+    <li class="item4"></li>
+    <li class="item5"></li>
+  </ul>
+  <!-- ul>li.item$@3*5 -->
+  <ul>
+    <li class="item3"></li>
+    <li class="item4"></li>
+    <li class="item5"></li>
+    <li class="item6"></li>
+    <li class="item7"></li>
+  </ul>
+  <!-- ul>li.item$@3*5 -->
+  <ul>
+    <li class="item7"></li>
+    <li class="item6"></li>
+    <li class="item5"></li>
+    <li class="item4"></li>
+    <li class="item3"></li>
+  </ul>
+
+  <!-- Text{} -->
+  <!-- a{Click me} -->
+   <a href="">Click me</a>
+  <!-- a{click}+b{here} -->
+  <a href="">Click</a><b>here</b>
+  <!-- a>{click}+b{here} -->
+  <a href="">Click<b>here</b></a>
+  <!-- p>{Click }+a{here}+{ to continue} -->
+  <p>Click<a href="">here</a> to continue</p>
+  <!-- p{Click }+a{here}+{ to continue} -->
+  <p>Click</p>
+  <a href="">here</a>to continue
+
+  <!-- Do not try to write complex abbreviations -->
 </body>
 </html>
