--- a/intermediate-html-and-css/emmet/practice.html
+++ b/intermediate-html-and-css/emmet/practice.html
@@ -125,6 +125,20 @@
     </footer>
   </div>
 
+  <div>
+    <dl>
+      <dt></dt>
+      <dd></dd>
+      <dt></dt>
+      <dd></dd>
+      <dt></dt>
+      <dd></dd>
+    </dl>
+  </div>
+  <footer>
+    <p></p>
+  </footer>
+
   <div id="header"></div>
   <div class="page"></div>
   <div id="footer" class="class1 class2 class3"></div>
