--- a/intermediate-html-and-css/svg/index.html
+++ b/intermediate-html-and-css/svg/index.html
@@ -3,12 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>SVG</title>
 </head>
 <body>
+  <!-- Circle -->
   <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-    <circle cx="50" cy="50" r="20"></circle>
+    <circle cx="50" cy="20" r="10"></circle>
   </svg>
-  
+
+  <!-- Rectangle -->
+  <svg width="170" height="170">
+    <rect></rect>
+  </svg>
+
+  <!-- Triangle -->
+  <svg height="220" width="300">
+    <path></path>
+  </svg>
+
+
 </body>
 </html>
