--- a/intermediate-html-and-css/more-text-styles/web-font-start.html
+++ b/intermediate-html-and-css/more-text-styles/web-font-start.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/web-font-start.css">
     <title>Web font example</title>
-    <link href="./css/web-font-start.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Hipster ipsum is the best</h1>
