--- a/intermediate-html-and-css/more-text-styles/practice/assessment.html
+++ b/intermediate-html-and-css/more-text-styles/practice/assessment.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>St Huxley's Community College</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="assessment-styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
@@ -15,7 +15,7 @@
   <section>
       <h2>Brave new world</h2>
 
-      <p>It's a brave new world out there. Our children are being put in increasing more competitive situations, both during recreation, and as they start to move into the adult world of <a href="https://en.wikipedia.org/wiki/Examination">examinations</a>, <a href="https://en.wikipedia.org/wiki/Jobs">jobs</a>, <a href="https://en.wikipedia.org/wiki/Career">careers</a>, and other life choices. Having the wrong mindset, becoming <a href="https://en.wikipedia.org/wiki/Emotion">too emotional</a>, or making the wrong choices can contribute to them experiencing difficulty in taking their rightful place in today's ideal society.</p>
+      <p>It's a brave new world out there. Our children are being put in increasing more competitive situations, both during recreation, and as they start to move into the adult world of <a href="https://en.wikipedia.org/wiki/Examination">examinations<img src="../assets/external-link-52.png" alt=""></a>, <a href="https://en.wikipedia.org/wiki/Jobs">jobs <img src="../assets/external-link-52.png" alt=""></a>, <a href="https://en.wikipedia.org/wiki/Career">careers<img src="../assets/external-link-52.png" alt=""></a>, and other life choices. Having the wrong mindset, becoming <a href="https://en.wikipedia.org/wiki/Emotion">too emotional<img src="../assets/external-link-52.png" alt=""></a>, or making the wrong choices can contribute to them experiencing difficulty in taking their rightful place in today's ideal society.</p>
 
       <p>As concerned parents, guardians or carers, you will no doubt want to give your children the best possible start in life — and you've come to the right place.</p>
 
