--- a/intermediate-html-and-css/form-basics/speaker-submission.html
+++ b/intermediate-html-and-css/form-basics/speaker-submission.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='UTF-8'/>
     <title>Speaker Submission</title>
-    <link rel='stylesheet' href='styles.css'/>
+    <link rel='stylesheet' href='css/styles.css'/>
   </head>
   <body>
     <header class='speaker-form-header'>
@@ -11,5 +11,32 @@
       <p><em>Want to speak at our fake conference? Fill out
         this form.</em></p>
     </header>
+    <form action='' method='get' class='speaker-form'>
+
+      <div class="form-row">
+        <label for="full-name">Name</label>
+        <input type="text" id="full-name" name="full-name">
+      </div>
+      <div class="form-row">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="joe@example.com">
+      </div>
+
+      <fieldset class='legacy-form-row'>
+        <legend>Type of Talk</legend>
+        <input id='talk-type-1'
+               name='talk-type'
+               type='radio'
+               value='main-stage' />
+        <label for='talk-type-1' class='radio-label'>Main Stage</label>
+        <input id='talk-type-2'
+               name='talk-type'
+               type='radio'
+               value='workshop'
+               checked />
+        <label for='talk-type-2' class='radio-label'>Workshop</label>
+      </fieldset>
+
+    </form>
   </body>
 </html>
