--- a/javascript/objects-and-object-constructors/index.html
+++ b/javascript/objects-and-object-constructors/index.html
@@ -9,5 +9,6 @@
   Go to the console =>
 
   <script src="scripts/script.js"></script>
+  <script src="practice/constructor-functions.js"></script>
 </body>
 </html>
