feat: Add <script src=practice/prototypal-inheritance.js></script> section

--- a/javascript/objects-and-object-constructors/index.html
+++ b/javascript/objects-and-object-constructors/index.html
@@ -10,5 +10,6 @@
 
   <script src="scripts/script.js"></script>
   <script src="practice/constructor-functions.js"></script>
+  <script src="practice/prototypal-inheritance.js"></script>
 </body>
 </html>
