feat: Add <script src=practice/this-keyword.js></script> section

--- a/javascript/objects-and-object-constructors/index.html
+++ b/javascript/objects-and-object-constructors/index.html
@@ -11,5 +11,6 @@
   <script src="scripts/script.js"></script>
   <script src="practice/constructor-functions.js"></script>
   <script src="practice/prototypal-inheritance.js"></script>
+  <script src="practice/this-keyword.js"></script>
 </body>
 </html>
