--- a/javascript/objects-and-object-constructors/index.html
+++ b/javascript/objects-and-object-constructors/index.html
@@ -10,6 +10,7 @@
 
   <script src="scripts/script.js"></script>
   <script src="practice/constructor-functions.js"></script>
+  <script src="practice2/constructor-functions.js"></script>
   <script src="practice/prototypal-inheritance.js"></script>
   <script src="practice/this-keyword.js"></script>
 </body>
