feat: <script src=prototypal-inheritance.js></script> section

--- a/javascript/objects-and-object-constructors/practice2/practice2.html
+++ b/javascript/objects-and-object-constructors/practice2/practice2.html
@@ -9,5 +9,6 @@
   Please go to the console => 
 
   <script src="constructor-functions.js"></script>
+  <script src="prototypal-inheritance.js"></script>
 </body>
 </html>
