feat: Add <script src=this-keyword.js></script>

--- a/javascript/objects-and-object-constructors/practice2/practice2.html
+++ b/javascript/objects-and-object-constructors/practice2/practice2.html
@@ -10,5 +10,6 @@
 
   <script src="constructor-functions.js"></script>
   <script src="prototypal-inheritance.js"></script>
+  <script src="this-keyword.js"></script>
 </body>
 </html>
