--- a/javascript/ES6-modules/index.html
+++ b/javascript/ES6-modules/index.html
@@ -6,6 +6,8 @@
   <title>ES6 modules</title>
 </head>
 <body>
-  
+  Please go to the console ===>
+
+  <script src="scripts/main.js"></script>
 </body>
 </html>
