feat: Add <script src=scripts/feature.js></script>

--- a/javascript/ES6-modules/index.html
+++ b/javascript/ES6-modules/index.html
@@ -9,5 +9,6 @@
   Please go to the console ===>
 
   <script src="scripts/main.js"></script>
+  <script src="scripts/feature.js"></script>
 </body>
 </html>
