feat: Add 'type=modules to <script>s

--- a/javascript/ES6-modules/index.html
+++ b/javascript/ES6-modules/index.html
@@ -8,7 +8,7 @@
 <body>
   Please go to the console ===>
 
-  <script src="scripts/main.js"></script>
-  <script src="scripts/feature.js"></script>
+  <script type="module" src="scripts/feature.js"></script>
+  <script type="module" src="scripts/main.js"></script>  
 </body>
 </html>
