--- a/javascript/classes/index.html
+++ b/javascript/classes/index.html
@@ -9,5 +9,6 @@
   Go to the console ===>
 
   <script src="scripts/script.js"></script>
+  <script type="module" src="scripts/exercises.js"></script>
 </body>
 </html>
