feat: Remove type=module from <script>

--- a/javascript/classes/index.html
+++ b/javascript/classes/index.html
@@ -9,6 +9,6 @@
   Go to the console ===>
 
   <script src="scripts/script.js"></script>
-  <script type="module" src="scripts/exercises.js"></script>
+  <script src="scripts/exercises.js"></script>
 </body>
 </html>
