--- a/typescript/everyday-types/index.html
+++ b/typescript/everyday-types/index.html
@@ -8,6 +8,7 @@
 <body>
   Please go to the console ===>
 
+  <script src="scripts/exercises.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 </html>
