refactor: Change 'src=exercises.ts' to 'src=exercises.js'

--- a/typescript/narrowing/exercises/exercises.html
+++ b/typescript/narrowing/exercises/exercises.html
@@ -8,6 +8,6 @@
 <body>
   Please go to the console ===>
 
-  <script src="exercises.ts"></script>
+  <script src="exercises.js"></script>
 </body>
 </html>
