--- a/typescript/more-on-functions/index.html
+++ b/typescript/more-on-functions/index.html
@@ -8,6 +8,6 @@
 <body>
   Please go to the console --->
 
-  <script src="main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
