--- a/typescript/modules/index.html
+++ b/typescript/modules/index.html
@@ -8,6 +8,6 @@
 <body>
   Please go to the console --->
 
-  <script src="scripts/main.js"></script>
+  <script type="module" src="scripts/entry-point.js"></script>
 </body>
 </html>
