--- a/typescript/type-manipulation/template-literal-types/exercises/exercises2.html
+++ b/typescript/type-manipulation/template-literal-types/exercises/exercises2.html
@@ -8,6 +8,6 @@
 <body>
   Please go to the console --->
 
-  <script src="exercises2.js"></script>
+  <script type="module" src="exercises2.js"></script>
 </body>
 </html>
