--- a/intermediate-html-and-css/introduction-to-grid/index.html
+++ b/intermediate-html-and-css/introduction-to-grid/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Introduction to grid</title>
 </head>
 <body>
-  
+  <div class="grid-container">
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+  </div>
 </body>
 </html>
