feat: Complete exercises2

--- a/intermediate-html-and-css/creating-a-grid/exercises2/exercises.html
+++ b/intermediate-html-and-css/creating-a-grid/exercises2/exercises.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="exercises.css">
-    <title>Exercises</title>
+    <title>Exercises2</title>
   </head>
   <body>
     <div class="setting-up-container">
@@ -20,12 +20,8 @@
 
     <div class="fixed-and-flexible-container">
       <div class="item">Header</div>
-      <div class="item">Header</div>
-      <div class="item">item3</div>
-      <div class="item">item4</div>
-      <div class="item">item5</div>
-      <div class="item">item6</div>
-      <div class="item">Footer</div>
+      <div class="item">Sidebar</div>
+      <div class="item">Main</div>
       <div class="item">Footer</div>
     </div>
 
@@ -43,8 +39,6 @@
       <div class="item">item4</div>
       <div class="item">item5</div>
       <div class="item">item6</div>
-      <div class="item">item7</div>
-      <div class="item">item8</div>
     </div>
 
     <div class="alignment-container">
@@ -96,14 +90,14 @@
 
 
     <div class="minmax-container">
-      <div class="item">item1</div>
-      <div class="item">item2</div>
-      <div class="item">item3</div>
-      <div class="item">item4</div>
-      <div class="item">item5</div>
-      <div class="item">item6</div>
-      <div class="item">item7</div>
-      <div class="item">item8</div>
+      <div class="item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, accusamus! Sapiente, ea quisquam obcaecati quae consequuntur labore cumque! Labore sit, magni facilis, saepe expedita aut aperiam nesciunt quos ab quia quas delectus impedit aliquid vitae porro placeat debitis dicta enim aspernatur accusamus laborum odio deserunt! A perspiciatis quos laborum ipsa?</div>
+      <div class="item">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, eaque! Quisquam aut et ullam laboriosam veritatis sequi numquam vero eius quidem, ducimus quos ipsam suscipit architecto est quasi voluptatem vitae totam autem repudiandae! Praesentium ullam ipsum enim ratione eos assumenda numquam. Sequi hic sit cupiditate reprehenderit quisquam quos doloremque unde placeat vitae. Magnam optio id aspernatur fuga. Nostrum modi aliquam aliquid labore natus, impedit excepturi corporis cum. Excepturi nihil cumque non quam inventore beatae? Aspernatur assumenda eos dolores dolor harum qui repellendus numquam blanditiis perspiciatis a, repudiandae iste labore et reprehenderit, dicta debitis alias voluptatem placeat aliquid incidunt necessitatibus suscipit?</div>
+      <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus doloremque, dicta voluptatibus dolore consequatur, tempora reiciendis eum nemo ipsa voluptates in tenetur blanditiis mollitia odio laborum exercitationem maxime veniam. Magni eum, ullam ab accusamus reiciendis hic harum nostrum quibusdam non autem error natus. Omnis laboriosam consequuntur deleniti sit tempore, necessitatibus temporibus nisi laudantium inventore ab. Ut pariatur quod facilis rem mollitia earum obcaecati? Consequatur, voluptatem expedita non error quia accusantium consequuntur eos et, modi, magni quod sed dignissimos quasi maxime facilis nisi asperiores ea praesentium at a alias quidem vitae? Sed laboriosam adipisci assumenda maiores exercitationem, repudiandae architecto fugit voluptates?</div>
+      <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quod dolores, cupiditate fugit numquam blanditiis consequatur magnam, atque deleniti dolor nobis minima eligendi similique itaque porro, quasi accusantium et facere eum sed! Sit obcaecati perspiciatis nam. Quasi at accusamus repellat repudiandae id perferendis est error? Ratione libero magni sunt minima incidunt quo eaque rem temporibus iusto illo? Expedita corrupti ut saepe quisquam officia ratione sequi reprehenderit iusto molestias at, dolore, ducimus, error distinctio nam harum quod nemo quidem repellat inventore unde quasi dolorem aliquid sed delectus? Cum maiores quos, nihil unde, voluptas fugiat sit dolorem similique minus aliquam saepe error!</div>
+      <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tempora ratione magni soluta error officia quas quod quidem alias nesciunt, at odio saepe accusantium velit reiciendis nisi debitis suscipit maxime ut? Laborum, totam. Omnis quidem possimus architecto, quia, at adipisci rerum iusto, distinctio quam officia placeat corrupti aliquam nobis ad?</div>
+      <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam voluptas, blanditiis alias nisi esse possimus aspernatur tenetur dicta? Impedit dignissimos temporibus mollitia aperiam dolor repudiandae et fugit quis corporis labore atque quaerat doloremque molestias sit ad magnam, fuga eligendi facere possimus commodi, exercitationem nobis similique? Earum provident magni nemo, praesentium unde ut! Atque impedit sequi voluptatum aliquam reprehenderit sunt odio sint fuga cumque saepe, quo et nulla quisquam, omnis corporis in. Earum temporibus distinctio possimus et fuga unde officia omnis error? Iusto mollitia possimus repellendus, nobis esse rem, molestiae commodi libero molestias minus quod? Aspernatur aliquid aut reiciendis dolore inventore?</div>
+      <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusantium facere corrupti asperiores recusandae consequuntur iure necessitatibus eveniet aspernatur numquam reprehenderit saepe, sapiente ex obcaecati odit dolor voluptate totam enim accusamus delectus sequi esse? Minima placeat ratione modi, consequuntur deleniti quidem at adipisci praesentium aut, et numquam architecto non eligendi.</div>
+      <div class="item">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vitae repellendus nisi? Vel itaque vitae veniam delectus voluptatum voluptate ratione officiis quam ducimus, quibusdam, molestiae hic debitis esse aut quia harum deleniti animi autem quo repellendus amet modi officia voluptatibus laudantium! Expedita facere magni, minus sed corrupti maxime quam amet nihil natus a eius perspiciatis harum dolores molestias velit laborum, tempora eligendi quos obcaecati sit quas assumenda esse nobis? Sunt maxime blanditiis nesciunt perferendis? Est consectetur illum iusto ullam delectus aliquam ratione harum ex quisquam perspiciatis ab ipsum, beatae quia tempora velit autem natus culpa perferendis itaque nihil, veniam fuga.</div>
     </div>
 
     <div class="against-line-container">
@@ -114,8 +108,6 @@
       <div class="item">item5</div>
       <div class="item">item6</div>
       <div class="item">item7</div>
-      <div class="item">item8</div>
-      <div class="item">item9</div>
     </div>
 
     <div class="positioning-shorthands-container">
