--- a/intermediate-html-and-css/position-grid-elements/exercises/exercises.html
+++ b/intermediate-html-and-css/position-grid-elements/exercises/exercises.html
@@ -7,11 +7,30 @@
   <title>Exercises</title>
 </head>
 <body>
-  <div class="container">
+  <div class="template-area-container">
+    <div class="item item1">Header</div>
+    <div class="item item2">Sidebar</div>
+    <div class="item item3">Main</div>
+    <div class="item item4">Footer</div>
+  </div>
+
+  <div class="span-container">
     <div class="item item1">item1</div>
     <div class="item item2">item2</div>
     <div class="item item3">item3</div>
     <div class="item item4">item4</div>
-  </div>
+    <div class="item item1">item5</div>
+    <div class="item item2">item6</div>
+    <div class="item item3">item7</div>
+    <div class="item item4">item8</div>
+    <div class="item item1">item9</div>
+    <div class="item item2">item10</div>
+    <div class="item item3">item11</div>
+    <div class="item item4">item12</div>
+    <div class="item item1">item13</div>
+    <div class="item item2">item14</div>
+    <div class="item item3">item15</div>
+    <div class="item item4">item16</div>
+  </di13>
 </body>
 </html>
