feat: Add exercises/

--- a/intermediate-html-and-css/position-grid-elements/exercises/exercises.html
+++ b/intermediate-html-and-css/position-grid-elements/exercises/exercises.html
@@ -31,6 +31,6 @@
     <div class="item item2">item14</div>
     <div class="item item3">item15</div>
     <div class="item item4">item16</div>
-  </di13>
+  </div>
 </body>
 </html>
