--- a/intermediate-html-and-css/position-grid-elements/exercises/exercises.html
+++ b/intermediate-html-and-css/position-grid-elements/exercises/exercises.html
@@ -19,18 +19,104 @@
     <div class="item item2">item2</div>
     <div class="item item3">item3</div>
     <div class="item item4">item4</div>
-    <div class="item item1">item5</div>
-    <div class="item item2">item6</div>
-    <div class="item item3">item7</div>
-    <div class="item item4">item8</div>
-    <div class="item item1">item9</div>
-    <div class="item item2">item10</div>
-    <div class="item item3">item11</div>
-    <div class="item item4">item12</div>
-    <div class="item item1">item13</div>
-    <div class="item item2">item14</div>
-    <div class="item item3">item15</div>
-    <div class="item item4">item16</div>
+    <div class="item item5">item5</div>
+    <div class="item item6">item6</div>
+    <div class="item item7">item7</div>
+    <div class="item item8">item8</div>
+    <div class="item item9">item9</div>
+    <div class="item item10">item10</div>
+    <div class="item item11">item11</div>
+    <div class="item item12">item12</div>
+    <div class="item item13">item13</div>
+    <div class="item item14">item14</div>
+    <div class="item item15">item15</div>
+    <div class="item item16">item16</div>
+  </div>
+
+  <div class="two-axis-container">
+    <div class="item item1">item1</div>
+    <div class="item item2">item2</div>
+    <div class="item item3">item3</div>
+    <div class="item item4">item4</div>
+    <div class="item item5">item5</div>
+    <div class="item item6">item6</div>
+    <div class="item item7">item7</div>
+    <div class="item item8">item8</div>
+    <div class="item item9">item9</div>
+  </div>
+
+  <div class="block-axis-container">
+    <div class="item item1">item1</div>
+    <div class="item item2">item2</div>
+    <div class="item item3">item3</div>
+    <div class="item item4">item4</div>
+    <div class="item item5">item5</div>
+    <div class="item item6">item6</div>
+    <div class="item item7">item7</div>
+    <div class="item item8">item8</div>
+    <div class="item item9">item9</div>
+  </div>
+
+  <div class="inline-axis-container">
+    <div class="item item1">item1</div>
+    <div class="item item2">item2</div>
+    <div class="item item3">item3</div>
+    <div class="item item4">item4</div>
+    <div class="item item5">item5</div>
+    <div class="item item6">item6</div>
+    <div class="item item7">item7</div>
+    <div class="item item8">item8</div>
+    <div class="item item9">item9</div>
+  </div>
+
+  <div class="place-container">
+    <div class="item item1">item1</div>
+    <div class="item item2">item2</div>
+    <div class="item item3">item3</div>
+    <div class="item item4">item4</div>
+    <div class="item item5">item5</div>
+    <div class="item item6">item6</div>
+    <div class="item item7">item7</div>
+    <div class="item item8">item8</div>
+    <div class="item item9">item9</div>
+  </div>
+
+  <div class="center-an-item-container">
+    <div class="item item1">item1</div>
+    <div class="item item2">item2</div>
+    <div class="item item3">item3</div>
+    <div class="item item4">item4</div>
+    <div class="item item5">item5</div>
+    <div class="item item6">item6</div>
+    <div class="item item7">item7</div>
+    <div class="item item8">item8</div>
+    <div class="item item9">item9</div>
+  </div>
+
+  <div class="track-block-container">
+    <div class="item item1">item1</div>
+    <div class="item item2">item2</div>
+    <div class="item item3">item3</div>
+    <div class="item item4">item4</div>
+  </div>
+
+  <div class="track-inline-container">
+    <div class="item item1">item1</div>
+    <div class="item item2">item2</div>
+    <div class="item item3">item3</div>
+    <div class="item item4">item4</div>
+  </div>
+
+  <div class="margin-auto-container">
+    <div class="item item1">item1</div>
+    <div class="item item2">item2</div>
+    <div class="item item3">item3</div>
+    <div class="item item4">item4</div>
+    <div class="item item5">item5</div>
+    <div class="item item6">item6</div>
+    <div class="item item7">item7</div>
+    <div class="item item8">item8</div>
+    <div class="item item9">item9</div>
   </div>
 </body>
 </html>
