feat: Complete exercises/

--- a/intermediate-html-and-css/using-flexbox-and-grid/exercises/exercises.html
+++ b/intermediate-html-and-css/using-flexbox-and-grid/exercises/exercises.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="absolutely-positioned-container">
     <div class="item1">item1</div>
     <div class="item2">item2</div>
     <div class="item3">item3</div>
@@ -19,6 +19,78 @@
     <div class="item8">item8</div>
     <div class="item9">item9</div>
   </div>
-  
+
+  <div class="containing-block-container">
+    <div class="item1">item1</div>
+    <div class="item2">item2</div>
+    <div class="item3">item3</div>
+    <div class="item4">item4</div>
+    <div class="item5">item5</div>
+    <div class="item6">item6</div>
+    <div class="item7">item7</div>
+    <div class="item8">item8</div>
+    <div class="item9">item9</div>
+  </div>
+
+  <div class="parent-container">
+    <div class="item1">item1</div>
+    <div class="item2">item2</div>
+    <div class="item3">item3</div>
+    <div class="item4">item4</div>
+    <div class="item5">item5</div>
+    <div class="item6">item6</div>
+    <div class="item7">item7</div>
+    <div class="item8">item8</div>
+    <div class="item9">item9</div>
+  </div>
+
+  <div class="display-content-container">
+    <div class="item1">
+      <div class="item11">item1</div>
+      <div class="item12">item2</div>
+      <div class="item13">item3</div>
+      <div class="item14">item4</div>
+    </div>
+    <div class="item2">item2</div>
+    <div class="item3">item3</div>
+    <div class="item4">item4</div>
+    <div class="item5">item5</div>
+    <div class="item6">item6</div>
+    <div class="item7">item7</div>
+    <div class="item8">item8</div>
+    <div class="item9">item9</div>
+  </div>
+
+  <div class="nested-child-container">
+    <div class="item1">item1</div>
+    <div class="item2">
+      <div class="item21">item2</div>
+      <div class="item22">item2</div>
+    </div>
+    <div class="item3">item3</div>
+    <div class="item4">item4</div>
+    <div class="item5">item5</div>
+    <div class="item6">item6</div>
+    <div class="item7">item7</div>
+    <div class="item8">item8</div>
+    <div class="item9">item9</div>
+  </div>
+
+  <div class="display-contents-2-container">
+    <div class="item1">item1</div>
+    <div class="item2">item2</div>
+    <div class="item3">item3</div>
+    <div class="item4">item4</div>
+    <div class="item5">item5</div>
+    <div class="item6">item6</div>
+    <div class="item7">item7</div>
+    <div class="item8">item8</div>
+    <div class="item9">
+      <div class="item96">item6</div>
+      <div class="item97">item7</div>
+      <div class="item98">item8</div>
+      <div class="item99">item9</div>
+    </div>
+  </div>
 </body>
 </html>
