feat: finish exercise2/

--- a/intermediate-html-and-css/using-flexbox-and-grid/exercises2/exercises.html
+++ b/intermediate-html-and-css/using-flexbox-and-grid/exercises2/exercises.html
@@ -34,7 +34,12 @@
 
   <div class="parent-container">
     <div class="item1">item1</div>
-    <div class="item2">item2</div>
+    <div class="item2">
+      <div class="item26">item6</div>
+      <div class="item27">item7</div>
+      <div class="item28">item8</div>
+      <div class="item29">item9</div>
+    </div>
     <div class="item3">item3</div>
     <div class="item4">item4</div>
     <div class="item5">item5</div>
