feat: Complete exercises

--- a/javascript/json/exercises/exercises.html
+++ b/javascript/json/exercises/exercises.html
@@ -64,30 +64,54 @@
       return cats.length;
     };
 
-    // Get number of babyCats
-    const getBabyCats = (cats) => {
-      const babyCats = [];
+    // Get babyCats
+    const getKittens = (cats) => {
+      const kittens = [];
 
       for (let i = 0; i < cats.length; i += 1) {
-        babyCats.push(cats[i].kittens);
+        kittens.push(cats[i].kittens);
       }
 
-      return babyCats;
+      return kittens.flat();
     };
 
-    // Get number of male female
+    // Get male cats and kittens
+    const getMaleCats = (kittens) => {
+      const maleCats = [];
+
+      for (let i = 0; i < kittens.length; i += 1) {
+        if (kittens[i].gender === 'm') {
+          maleCats.push(kittens[i]);
+        }
+      }
+      
+      return maleCats;
+    };
+
+    // Get mommy cats' names
+    const getMommyCatsNames = (cats) => {
+      const mommyCatsNames = [];
+
+      for (let i = 0; i < cats.length; i += 1) {
+        mommyCatsNames.push(cats[i].name);
+      }
+
+      return mommyCatsNames;
+    };
 
     function displayCatInfo(catString) {
       let total = 0;
-      let male = 0;
+      let male = getMaleCats(getKittens(cats)).length;
+      const female = getKittens(cats).length - male;
 
       // Add your code here
-
+      const motherInfo = `${getMommyCatsNames(cats).join(", ")}`;
+      const kittenInfo = getKittens(cats).length;
 
       // Don't edit the code below here!
 
-      para1.textContent = motherInfo;
-      para2.textContent = kittenInfo;
+      para1.textContent = `Moth cats names: ${motherInfo}`;
+      para2.textContent = `Total kittens: ${kittenInfo} --- Male: ${male} --- Female: ${female}`;
     }
 
     section.appendChild(para1);
