--- a/javascript/oop-principles/exercises/exercises.html
+++ b/javascript/oop-principles/exercises/exercises.html
@@ -8,6 +8,6 @@
 <body>
   Please go to the console =>
 
-  <script src="exercises.js"></script>
+  <script type="module" src="exercises.js"></script>
 </body>
 </html>
