--- a/javascript/json/exercises/exercises.html
+++ b/javascript/json/exercises/exercises.html
@@ -34,12 +34,12 @@
     let kittenInfo;
     const requestURL = 'https://mdn.github.io/learning-area/javascript/oojs/tasks/json/sample.json';
 
-    fetch(requestURL)
-    .then(response => response.text())
-    .then(text => displayCatInfo(text))
+    // fetch(requestURL)
+    // .then(response => response.text())
+    // .then(text => displayCatInfo(text))
 
     // Get cats
-    const fetchCat = async () => {
+    const fetchCats = async () => {
       const request = new Request(requestURL);
       const response = await fetch(request);
       const catsData = await response.json();
@@ -53,7 +53,7 @@
     let cats;
 
     // Assign the resolved value to 'cats'
-    fetchCat()
+    fetchCats()
     .then(data => {
       cats = data;
       console.log(cats);
@@ -99,6 +99,7 @@
       return mommyCatsNames;
     };
 
+    // Show cats information to the screen
     function displayCatInfo(catString) {
       let total = 0;
       let male = getMaleCats(getKittens(cats)).length;
