feat: finish 'working-with-apis'

--- a/javascript/working-with-apis/index.html
+++ b/javascript/working-with-apis/index.html
@@ -8,7 +8,13 @@
 <body>
   Please go to the console =>
 
-  <img src="#" alt="">
+    <button type="submit" name="search">Search</button>
+    <input type="text" name="search">  
+
+  <ul class="images">
+
+  </ul>
+  <button id="add-image">Add Random Image</button>
   <script type="module" src="index.js"></script>
 </body>
 </html>
